# eryndor-mmo

./: .env.example  .env.production  .env.production.example  .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_AUTOMATION.md  Dockerfile  QUICK_START.md  README.md  SECURITY_PLAN.md  TECH_DEMO_PLAN.md  TODO.md  Trunk.toml  config.toml  github-secrets-checklist.md  tiled_types_export.json  wrangler.toml
.claude/: settings.local.json
.do/: app.yaml
.sqlx/: query-2e9e7a1ba72d504c816420fde685c304bb07940407c16a5ae18a75f1c7818b2d.json  (+4 more)
crates/bevy_editor/: Cargo.toml
crates/bevy_editor/src/: main.rs
crates/bevy_editor_app/: Cargo.toml
crates/bevy_editor_app/src/: lib.rs  scene_loader.rs  systems.rs
crates/bevy_editor_core/: Cargo.toml
crates/bevy_editor_core/src/: camera.rs  selection.rs  shortcuts.rs
crates/bevy_editor_project/: Cargo.toml
crates/bevy_editor_project/src/: project_manager.rs  project_wizard.rs
crates/bevy_editor_tilemap/: Cargo.toml
crates/bevy_editor_tilemap/src/: lib.rs  map_canvas.rs  tile_painter.rs  tileset_manager.rs
crates/bevy_editor_ui_egui/: Cargo.toml
crates/bevy_editor_ui_egui/src/: build_progress_ui.rs  collision_editor.rs  entity_templates.rs  gizmos.rs  inspector_panel.rs  layer_panel.rs  lib.rs  panel_manager.rs  project_browser_panel.rs  scene_tabs.rs  scene_tree_panel.rs  shortcuts.rs  tilemap_ui.rs  tileset_panel.rs  ui.rs
crates/eryndor_client/: Cargo.toml  Trunk.toml
crates/eryndor_client/.cargo/: config.toml
crates/eryndor_client/bevy_web/web-release/: wrangler.toml
crates/eryndor_client/bevy_web/web-release/client/: index.html
crates/eryndor_client/src/: ability_cache.rs  game_state.rs  input.rs  item_cache.rs  main.rs  rendering.rs  tiled_map.rs  tilemap.rs  ui.rs
crates/eryndor_client/src/ui/: chat.rs  helpers.rs  login.rs  mod.rs  state.rs  tooltips.rs
crates/eryndor_client/src/ui/admin/: dashboard.rs  mod.rs
crates/eryndor_client/src/ui/game/: mod.rs
crates/eryndor_editor/: Cargo.toml  README.md
crates/eryndor_editor/assets/content/abilities/: 900_test_aoe.ability.json  901_test_heal.ability.json  902_test_mobility.ability.json  903_test_buff.ability.json  aimed_shot.ability.json  arcane_blast.ability.json  axe_berserker_rage.ability.json  axe_decapitate.ability.json  blink.ability.json  bow_quick_shot.ability.json  charge.ability.json  cleave.ability.json  cloth_spell_shield.ability.json  dagger_assassination.ability.json  ignite.ability.json  leather_perfect_balance.ability.json  mace_consecration.ability.json  mace_hammer_strike.ability.json  mace_judgment.ability.json  mage_meteor_storm.ability.json  mage_time_warp.ability.json  plate_iron_will.ability.json  plate_shield_wall.ability.json  plate_unbreakable.ability.json  poison_blade.ability.json  rending_strike.ability.json  rogue_blind.ability.json  rogue_cloak_of_shadows.ability.json  second_wind.ability.json  shadow_step.ability.json  smite.ability.json  staff_staff_sweep.ability.json  sword_precise_strike.ability.json  wand_hex.ability.json  wand_magic_missile.ability.json  wand_mana_burn.ability.json  warrior_battle_shout.ability.json  warrior_intimidating_shout.ability.json
crates/eryndor_editor/assets/content/enemies/: orc.enemy.json  spider.enemy.json  wolf.enemy.json
crates/eryndor_editor/assets/content/items/: bow.item.json  staff.item.json
crates/eryndor_editor/assets/content/npcs/: village_elder.npc.json
crates/eryndor_editor/assets/content/quests/: axe_training_1.quest.json  bow_training_4.quest.json  cloth_training_1.quest.json  dagger_training_1.quest.json  dagger_training_2.quest.json  dagger_training_3.quest.json  first_steps.quest.json  leather_training_1.quest.json  leather_training_2.quest.json  leather_training_3.quest.json  leather_training_4.quest.json  mace_training_1.quest.json  mace_training_4.quest.json  mage_training_3.quest.json  plate_training_2.quest.json  plate_training_4.quest.json  rogue_training_1.quest.json  rogue_training_2.quest.json  staff_training_1.quest.json  staff_training_2.quest.json  sword_training_1.quest.json  sword_training_3.quest.json  sword_training_4.quest.json  wand_training_1.quest.json  wand_training_4.quest.json  warrior_training_2.quest.json
crates/eryndor_editor/assets/content/tiles/: tile_palette.tiles.json  tilesets.json
crates/eryndor_editor/src/: api_client.rs  api_events.rs  editor_state.rs  lib.rs  main.rs
crates/eryndor_editor/src/automap/: mod.rs
crates/eryndor_editor/src/autotile/: mod.rs
crates/eryndor_editor/src/commands/: clipboard.rs  command.rs  mod.rs  shortcuts.rs
crates/eryndor_editor/src/map/: entity.rs  layer.rs  mod.rs  tileset.rs
crates/eryndor_editor/src/modules/: abilities.rs  assets.rs  enemies.rs  items.rs  loot.rs  mod.rs  npcs.rs  quests.rs
crates/eryndor_editor/src/modules/tilesets/: mod.rs  tile_properties.rs  tileset_list.rs  tileset_viewer.rs
crates/eryndor_editor/src/modules/world/: mod.rs
crates/eryndor_editor/src/project/: export.rs  file.rs  mod.rs
crates/eryndor_editor/src/render/: mod.rs
crates/eryndor_editor/src/schema/: form_generator.rs  loader.rs  mod.rs  types.rs
crates/eryndor_editor/src/templates/: mod.rs
crates/eryndor_editor/src/tools/: mod.rs
crates/eryndor_editor/src/ui/: animation_editor.rs  dialogs.rs  dialogue_editor.rs  inspector.rs  menu_bar.rs  mod.rs  schema_editor.rs  terrain.rs  terrain_palette.rs  tileset.rs  tileset_editor.rs  toolbar.rs  tree_view.rs
crates/eryndor_server/: Cargo.toml
crates/eryndor_server/src/: admin.rs  admin_cli.rs  assets.rs  audit.rs  auth.rs  character.rs  combat.rs  config.rs  dashboard.rs  database.rs  editor_api.rs  game_data.rs  guest.rs  inventory.rs  main.rs  moderation.rs  movement.rs  quest.rs  spawn.rs  trainer.rs  weapon.rs  world.rs
crates/eryndor_server/src/abilities/: database.rs  definitions.rs  effects.rs  mod.rs
crates/eryndor_server/src/database/: account.rs  bans.rs  character.rs  inventory.rs  migrations.rs  mod.rs  oauth.rs  progression.rs  quests.rs
crates/eryndor_server/src/editor_api/: crud.rs  mod.rs
deploy/: nginx.conf  (+2 more)
(+118 files in other folders)
