[workspace]
members = [
    "crates/eryndor_shared",
    "crates/eryndor_server",
    "crates/eryndor_client",
]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.17", default-features = false }
bevy_replicon = "0.36"
# Multi-transport support:
# - Native: UDP for native clients (Windows/Mac/Linux)
# - WebSocket: For WASM clients (simpler dependencies, no cmake required)
# - WebTransport: Server-side only for now (requires cmake/clang which are problematic on MSYS)
bevy_renet2 = { version = "0.11", features = ["native_transport", "wt_server_transport", "ws_server_transport", "ws_client_transport"] }
bevy_replicon_renet2 = { version = "0.11", features = ["native_transport", "wt_server_transport", "ws_server_transport", "ws_client_transport"] }
avian2d = { version = "0.4", default-features = false, features = ["2d", "f32", "parry-f32", "xpbd_joints", "parallel", "bevy_picking", "serialize"] }
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
