[workspace]
members = [
    "crates/eryndor_shared",
    "crates/eryndor_server",
    "crates/eryndor_client",
    "crates/eryndor_editor",
]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.17", default-features = false }
bevy_replicon = "0.36"
# NOTE: bevy_renet2 and bevy_replicon_renet2 are NOT workspace dependencies
# because each crate needs different transport features (server vs client, native vs WASM)
avian2d = { version = "0.4", default-features = false, features = ["2d", "f32", "parry-f32", "xpbd_joints", "parallel", "bevy_picking", "serialize"] }
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_info",
] }
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_info",
] }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# This profile will be used by `bevy run web` automatically.
[profile.web-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "z"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

#[patch.crates-io]
#cmake = { git = "https://github.com/reflectronic/cmake-rs", branch = "vs-18" }