[package]
name = "bevy_editor"
version = "0.1.0"
edition = "2021"
description = "An experimental Bevy game editor"
license = "MIT OR Apache-2.0"

[features]
default = ["egui-ui"]
egui-ui = ["bevy_editor_ui_egui", "bevy_egui"]
feathers-ui = ["bevy_editor_ui_feathers"]

[dependencies]
bevy = { workspace = true }
bevy_editor_app = { path = "../bevy_editor_app" }
bevy_editor_ui_egui = { path = "../bevy_editor_ui_egui", optional = true }
bevy_editor_ui_feathers = { path = "../bevy_editor_ui_feathers", optional = true }
# TODO: bevy-inspector-egui 0.34 still pulls Bevy 0.16 deps - wait for 0.35 release
# bevy-inspector-egui = "0.34"
bevy_egui = { version = "0.38", optional = true }

[lints]
workspace = true
