[package]
name = "bevy_editor_project"
version = "0.1.0"
edition = "2021"
description = "Project and workspace management for Bevy editors"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bevyengine/bevy-editor"
keywords = ["bevy", "editor", "project", "gamedev"]
categories = ["game-development", "game-engines"]
readme = "README.md"

[dependencies]
bevy = { workspace = true }
bevy_editor_foundation = { path = "../bevy_editor_foundation" }
bevy_editor_formats = { path = "../bevy_editor_formats" }
bevy_editor_templates = { path = "../bevy_editor_templates" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# System paths
dirs = { version = "5.0", optional = true }
chrono = { version = "0.4", optional = true }

# CLI integration (optional)
crossbeam-channel = { version = "0.5", optional = true }

# UI dependencies (eventually these should move to a separate UI crate)
bevy_egui = { version = "0.38", optional = true }
rfd = { version = "0.15", optional = true }
arboard = { version = "3.4", optional = true }

[features]
default = ["workspace", "ui"]
workspace = ["dep:dirs", "dep:chrono"]
cli = ["dep:crossbeam-channel"]
ui = ["dep:bevy_egui", "dep:rfd", "dep:arboard"]

[lints]
workspace = true
