[package]
name = "eryndor_editor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "editor"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true, features = ["default"] }
bevy_egui = "0.38"
bevy_prototype_lyon = "0.15"
serde = { workspace = true }
serde_json = "1.0"
log = { workspace = true }
tracing = { workspace = true }

eryndor_shared = { path = "../eryndor_shared" }

# WASM-specific dependencies
[target.'cfg(target_family = "wasm")'.dependencies]
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "History",
    "Document",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "HtmlInputElement",
    "FileList",
    "File",
    "Blob",
    "Url",
    "Element",
    "Event",
    "HtmlElement",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
gloo-net = "0.6"
gloo-storage = "0.3"

# Native dependencies (for local development)
[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
tokio = { version = "1", features = ["rt", "macros"] }
rfd = "0.15"
