[package]
name = "eryndor_editor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "editor"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true, features = ["default"] }
bevy_egui = "0.38"
serde = { workspace = true }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# File dialogs (native only)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15"
