[package]
name = "eryndor_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true, features = ["bevy_core_pipeline", "bevy_render"] }
bevy_replicon = { workspace = true }
bevy_renet2 = { version = "0.11", default-features = false, features = ["native_transport", "wt_server_transport", "ws_server_transport"] }
bevy_replicon_renet2 = { version = "0.11", default-features = false, features = ["server", "native_transport", "wt_server_transport", "ws_server_transport"] }
avian2d = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
log = { workspace = true }
tracing = { workspace = true }
env_logger = "0.11"

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }

# Hashing for passwords
argon2 = "0.5"
rand = "0.8"

# Configuration
toml = "0.8"
dotenvy = "0.15"

# OAuth verification
reqwest = { version = "0.12", features = ["json"] }

# Content moderation
rustrict = "0.7"

# Rate limiting
governor = "0.6"

# Admin dashboard
axum = { version = "0.7", features = ["tokio"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
jsonwebtoken = "9"

# Utilities
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }

eryndor_shared = { path = "../eryndor_shared" }
